@@ -1080,7 +1080,7 @@ operandBaseName (const char *op)
 /*  add the ! symbol before each parameter to negate the condition  */
 /* combinations with multiple parameters                            */
 /*  '!code-speed' '!code-size': apply for balanced opt.             */
-/*  '!code-size!: apply for balanced and when optimizign for speed  */
+/*  '!code-size': apply for balanced and when optimizing for speed  */
 /*  '!code-speed': apply unless optimizing for code speed           */
 /*------------------------------------------------------------------*/
 FBYNAME (optimizeFor)
@@ -1695,16 +1695,88 @@ FBYNAME (same)
 }
 
 /*-----------------------------------------------------------------*/
+/* strIsSymbol - returns true if the parameter is a symbol         */
+/* That is: an underscore followed by one or more chars            */
+/*-----------------------------------------------------------------*/
+static bool
+strIsSymbol(const char *str)
+{
+  return *str == '_' && str[1] != '\0';
+}
+
+/*-----------------------------------------------------------------*/
+/* strIsLiteral - returns true if the parameter is a literal       */
+/* Checks these formats: binary, octal, decimal, hexadecimal       */
+/* Skips preceding signs.                                          */
+/*-----------------------------------------------------------------*/
+static bool
+strIsLiteral(const char *str)
+{
+  const char digits[] = {'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f'}; 
+  unsigned char base = 10;
+  unsigned char validDigits = 0;
+  
+  // has to start with a number or a sign
+  if(!isdigit( (unsigned char)(*str) ) && (*str) != '-' && (*str) != '+')
+    return false;
+  // skip sign
+  if ((*str) == '-' || (*str) == '+')
+    str++;
+
+  // handle 0b 0o 0d 0x
+  if((*str) == '0')
+    {
+      const char nextChar = tolower((unsigned char)(str[1]));
+      validDigits = 0;
+      if (nextChar == 'b')
+        {
+          base = 2;
+          ++str;
+        }
+      else if(nextChar == 'o')
+        {
+          base = 8;
+          ++str;
+        }
+      else if(nextChar == 'd')
+        {
+          base = 10;
+          ++str;
+        }
+      else if(nextChar == 'x')
+        {
+          base = 16;
+          ++str;
+        }
+      else
+        validDigits = 1; // the first '0' is a valid digit
+      
+      ++str;
+    }
+  
+  while((unsigned char)(*str) != '\0'){
+    unsigned char i;
+    for(i = 0; i < base; ++i){
+      if(tolower((unsigned char)(*str)) == digits[i])
+        break;
+    }
+    // number was too big or not valid
+    if(i >= base)
+      return false;
+    ++validDigits;
+    ++str;
+  }
+  return validDigits > 0;
+}
+
+/*-----------------------------------------------------------------*/
 /* operandsLiteral - returns true if the condition's operands are  */
 /* literals.                                                       */
 /*-----------------------------------------------------------------*/
 FBYNAME (operandsLiteral)
 {
-  set *operands;
+  set *operands = setFromConditionArgs (cmdLine, vars);
   const char *op;
-  const char digits[] = {'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f'};
-
-  operands = setFromConditionArgs (cmdLine, vars);
 
   if (!operands)
     {
@@ -1716,55 +1788,148 @@ FBYNAME (operandsLiteral)
 
   for (op = setFirstItem (operands); op; op = setNextItem (operands))
     {
-      unsigned char base = 10;
-      // has to start with a number or a sign
-      if(!isdigit( (unsigned char)(*op) ) && (*op) != '-' && (*op) != '+')
+      if (!strIsLiteral(op))
         {
           deleteSet (&operands);
-          return FALSE;
+          return false;
         }
-      // handle 0b 0o 0d 0x
-      if((*op) == '0' && tolower((unsigned char)(op[1])) == 'b')
-        {
-          base = 2;
-          op += 2;
-        }
-      else if((*op) == '0' && tolower((unsigned char)(op[1])) == 'o')
-        {
-          base = 8;
-          op += 2;
-        }
-      else if((*op) == '0' && tolower((unsigned char)(op[1])) == 'd')
-        {
-          base = 10;
-          op += 2;
-        }
-      else if((*op) == '0' && tolower((unsigned char)(op[1])) == 'x')
-        {
-          base = 16;
-          op += 2;
-        }
-      else
-        ++op;
-      
-      while((unsigned char)(*op) != '\0'){
-        unsigned char i;
-        for(i = 0; i < base; ++i){
-          if(tolower((unsigned char)(*op)) == digits[i])
-            break;
-        }
-        // number was too big
-        if(i >= base)
-          {
-            deleteSet (&operands);
-            return FALSE;
-          }
-        ++op;
-      }
     }
 
   deleteSet (&operands);
-  return TRUE;
+  return true;
+}
+
+/*-----------------------------------------------------------------*/
+/* strIsLiteralOrSymbol - returns true if the parameter is a       */
+/* literal or compiler symbol                                      */
+/*-----------------------------------------------------------------*/
+static bool
+strIsLiteralOrSymbol(const char *str)
+{
+  return strIsSymbol(str) || strIsLiteral(str);
+}
+
+/*-----------------------------------------------------------------*/
+/* operandsLitOrSym - returns true if the condition's operands are */
+/* literals or compiler symbols.                                   */
+/*-----------------------------------------------------------------*/
+FBYNAME (operandsLitOrSym)
+{
+  set *operands;
+  const char *op;
+
+  operands = setFromConditionArgs (cmdLine, vars);
+
+  if (!operands)
+    {
+      fprintf (stderr,
+               "*** internal error: operandsLitOrSym peephole restriction"
+               " malformed: %s\n", cmdLine);
+      return false;
+    }
+
+  for (op = setFirstItem (operands); op; op = setNextItem (operands))
+    {
+      if (!strIsLiteralOrSymbol(op))
+        {
+          deleteSet (&operands);
+          return false;
+        }
+    }
+
+  deleteSet (&operands);
+  return true;
+}
+
+/*-----------------------------------------------------------------*/
+/* removeParentheses                                               */
+/* First operand: parameter to be parsed                           */
+/* Second operand: result of conversion                            */
+/* The function removes the input parameter parentheses if present,*/
+/* else it copies the input directly to the output.                */
+/* returns true if the input has not parentheses.                  */
+/* returns true if it has parametheses at first and last chars     */
+/*              and there was no other error                       */
+/*-----------------------------------------------------------------*/
+FBYNAME (removeParentheses)
+{
+  int dstKey;
+  int i;
+  
+  // Find space previous to last operand
+  for (i = strlen (cmdLine)-1; i >= 0 && ISCHARSPACE (cmdLine[i]); --i)
+    ;
+  for (; i >= 0 && !ISCHARSPACE (cmdLine[i]); --i)
+    ;
+  if (i < 0 || cmdLine[i+1] != '%' || (cmdLine[i+1] && (sscanf (&cmdLine[i+2], "%d", &dstKey) != 1 || dstKey < 0)))
+    {
+      fprintf (stderr,
+           "*** internal error: removeParentheses peephole restriction"
+           " has bad result container: %s\n", &cmdLine[i+1]);
+      return false;
+    }
+  //Parse cmd line without last operand
+  cmdLine[i] = '\0';
+  set *operands = setFromConditionArgs (cmdLine, vars);
+  cmdLine[i] = ' '; // Restore space
+    
+  if (!operands || elementsInSet(operands) > 1)
+    {
+      fprintf (stderr,
+               "*** internal error: removeParentheses peephole restriction"
+               " malformed: %s\n", cmdLine);
+      return false;
+    }
+  
+  // Parse the operand and remove the parenthesis
+  char r[128];  
+  const char *op = setFirstItem (operands);
+  
+  if (*op == '(')
+  {
+    if(op[strlen(op)-1] == ')')
+      op++; // Skip start parenthesis
+    else
+      {
+        // Abort if no matching closing parenthesis
+        deleteSet (&operands);
+        return false;
+      }
+  }
+  if (strlen(op) > 127) // Abort if string does not fit in buffer
+    {
+      deleteSet (&operands);
+      return false;
+    }
+  
+  // Do the copy and skip ending parenthesis
+  i = 0;
+  while (*op)
+  {
+    if (*op != ')')
+      {
+        r[i++] = *op++;
+      }
+    else
+      {
+        op++;
+        break;
+      }
+  }
+  r[i] = '\0';
+  
+  // Abort if remaining chars in source or no chars copied into result string
+  if ((*op) || (i == 0))
+    {
+      deleteSet (&operands);
+      return false;
+    }
+     
+  char *p[] = {r, NULL};  
+  bindVar (dstKey, p, &vars);
+
+  deleteSet (&operands);
+  return true;
 }
 
 static long *
@@ -1809,6 +1974,106 @@ immdError (const char *info, const char *param, const char *cmd)
   return FALSE;
 }
 
+/*-----------------------------------------------------------------*/
+/* isPowerOfTwo - true if n is a power of 2                        */
+/*-----------------------------------------------------------------*/
+static bool
+isPowerOfTwo(unsigned long n)
+{  
+  return (n != 0) && ((n & (n - 1)) == 0);
+}  
+
+/*-----------------------------------------------------------------*/
+/* findBitPosition - Returns the bit position set or cleared in n  */
+/* Parameters:                                                     */
+/*  n: value to be tested.                                         */
+/*  bits: number of positions to test.                             */
+/*  complement: when true, the number must be bitwise complemented */
+/* Returns:                                                        */
+/*  -2 if bits is out of valid range (1..32)                       */
+/*  -1 if n has more than one bit set or cleared                   */
+/*  -1 if n has bits in positions over the bits param              */
+/*  bit position (starting at 0) when only 1 bit set or clear      */
+/* Examples:                                                       */
+/*  n=0x02, bits=8, complemented=false -> 1                        */
+/*  n=0x7F, bits=8, complemented=true  -> 7                        */
+/*-----------------------------------------------------------------*/
+static int
+findBitPosition(unsigned long n, unsigned long bits, bool complement)
+{
+  unsigned long mask;
+  int bitPos;
+  
+  if ((bits < 1) || (bits > 32)) //bits out of range?
+    return -2;
+  mask = (1ULL << bits) -1;
+  if (n != (n & mask)) // bits outside mask?
+    return -1;
+  
+  if (complement)
+    n = (~n) & mask;
+  if (!isPowerOfTwo (n)) // Not valid if more than one bit is set
+    return -1;
+  
+  bitPos = -1;
+  // One by one move the only set bit to right till it reaches end  
+  while (n)
+    {  
+      n >>= 1;
+      bitPos++; //count number of shifts
+    }
+  
+  return bitPos;
+}
+
+/*-----------------------------------------------------------------*/
+/* swapOperation - Calculates a swap operation with given params   */
+/* Parameters:                                                     */
+/*  n: value to be swapped.                                        */
+/*  bits: length of value to be swapped, in bits.                  */
+/* Returns 0 if no error:                                          */
+/*  -2 if bits is out of valid range: even numbers (2..32)         */
+/*  -1 if n has bits in positions over the bits param              */
+/*-----------------------------------------------------------------*/
+static int
+swapOperation (unsigned long n, unsigned long bits, unsigned long * result)
+{
+  unsigned long mask = (1ULL << bits) -1;
+  unsigned int shift = bits / 2;
+  
+  if ((bits < 1) || (bits > 32) || (bits & 0x01)) // bits out of range or odd
+    return -2;
+  if (n != (n & mask)) // bits outside mask?
+    return -1;
+  
+  *result = (((n << shift) | (n >> shift)) & mask);
+  return 0; // no error.
+}
+
+/*-----------------------------------------------------------------*/ 
+/* stringMatchesOperator - returns true if 'str' matches 'op'      */
+/* 'str' matches 'op' if they contain the same string              */
+/* 'str' also matches if surrounded by quotes or double quotes     */
+/*-----------------------------------------------------------------*/
+static bool 
+stringMatchesOperator (const char * str, const char *op)
+{
+  if (str && op)
+    {
+      if (strcmp(str, op) == 0)
+        {
+          return true;
+        }
+      else
+        {
+          size_t length = strlen(str);
+          // Check if quotes are present and they are the same at start and end.
+          if ((length >= 2) && ((str[0] == '\'') || (str[0] == '\"')) && (str[0] == str[length-1]))
+            return strncmp(&str[1], op, length-2) == 0;
+        }
+    }
+  return false;
+}
 /*-----------------------------------------------------------------*/ 
 /* immdInRange - returns true if the result of a given operation   */
 /* of two immediates is in a give range.                           */
@@ -1818,14 +2083,6 @@ FBYNAME (immdInRange)
   char r[64], operator[8];
   const char *op;
   long i, j, k, h, low, high, left_l, right_l, order;
-  const char *padd[] =    {"+", "'+'", "\"+\""};
-  const char *psub[] =    {"-", "'-'", "\"-\""};
-  const char *pmul[] =    {"*", "'*'", "\"*\""};
-  const char *pdiv[] =    {"/", "'/'", "\"/\""};
-  const char *pmod[] =    {"%", "'%'", "\"%\""};
-  const char *pbitand[] = {"&", "'&'", "\"&\""};
-  const char *pxor[] =    {"^", "'^'", "\"^\""};
-  const char *pbitor[] =  {"|", "'|'", "\"|\""};
 
   for (i = order = 0; order < 6;)
     {
@@ -1898,74 +2155,56 @@ FBYNAME (immdInRange)
     }
 
   // calculate
-  for (j = k = 0; k < sizeof (padd) / sizeof (padd[0]); k++) // add
-    if (strcmp (operator, padd[k]) == 0)
-      {
-        i = left_l + right_l;
-        j = 1;
-        break;
-      }
-  if (!j)
-    for (k = 0; k < sizeof (psub) / sizeof (psub[0]); k++) // sub
-      if (strcmp (operator, psub[k]) == 0)
-        {
-          i = left_l - right_l;
-          j = 1;
-          break;
-        }
-  if (!j)
-    for (k = 0; k < sizeof (pmul) / sizeof (pmul[0]); k++) // mul
-      if (strcmp (operator, pmul[k]) == 0)
-        {
-          i = left_l * right_l;
-          j = 1;
-          break;
-        }
-  if (!j)
-    for (k = 0; k < sizeof (pdiv) / sizeof (pdiv[0]); k++) // div
-      if (strcmp (operator, pdiv[k]) == 0)
-        {
-          if (right_l == 0)
-            return immdError ("division by zero", "", cmdLine);
-          i = left_l / right_l;
-          j = 1;
-          break;
-        }
-  if (!j)
-    for (k = 0; k < sizeof (pmod) / sizeof (pmod[0]); k++) // mod
-      if (strcmp (operator, pmod[k]) == 0)
-        {
-          if (right_l == 0)
-            return immdError ("division by zero", "", cmdLine);
-          i = left_l % right_l;
-          j = 1;
-          break;
-        }
-  if (!j)
-    for (k = 0; k < sizeof (pbitand) / sizeof (pbitand[0]); k++) // and
-      if (strcmp (operator, pbitand[k]) == 0)
-        {
-          i = left_l & right_l;
-          j = 1;
-          break;
-        }
-  if (!j)
-    for (k = 0; k < sizeof (pxor) / sizeof (pxor[0]); k++) // xor
-      if (strcmp (operator, pxor[k]) == 0)
-        {
-          i = left_l ^ right_l;
-          j = 1;
-          break;
-        }
-  if (!j)
-    for (k = 0; k < sizeof (pbitor) / sizeof (pbitor[0]); k++) // or
-      if (strcmp (operator, pbitor[k]) == 0)
-        {
-          i = left_l | right_l;
-          j = 1;
-          break;
-        }  
-  if (!j)
+  if (stringMatchesOperator (operator, "+")) // add
+    {
+      i = left_l + right_l;
+    }
+  else if (stringMatchesOperator (operator, "-")) // sub
+    {
+      i = left_l - right_l;
+    }
+  else if (stringMatchesOperator (operator, "*")) // mul
+    {
+      i = left_l * right_l;
+    }
+  else if (stringMatchesOperator (operator, "/")) // div
+    {
+      if (right_l == 0)
+        return immdError ("division by zero", "", cmdLine);
+      i = left_l / right_l;
+    }
+  else if (stringMatchesOperator (operator, "%")) // mod
+    {
+      if (right_l == 0)
+        return immdError ("division by zero", "", cmdLine);
+      i = left_l % right_l;
+    }
+  else if (stringMatchesOperator (operator, "&")) // and
+    {
+      i = left_l & right_l;
+    }
+  else if (stringMatchesOperator (operator, "^")) // xor
+    {
+      i = left_l ^ right_l;
+    }
+  else if (stringMatchesOperator (operator, "|")) // or
+    {
+      i = left_l | right_l;
+    }
+  else if (stringMatchesOperator (operator, "singleSetBit") || stringMatchesOperator (operator, "singleResetBit")) // singleSetBit - singleResetBit
+    {
+      i = findBitPosition(left_l, right_l, stringMatchesOperator (operator, "singleResetBit"));
+      if(i < -1 )
+        return immdError ("bad right operand", operator, cmdLine);
+      if(i < 0)
+        return false;
+    }
+  else if (stringMatchesOperator (operator, "swap")) // swap
+    {
+      if (swapOperation(left_l, right_l, (unsigned long *)&i) != 0)
+        return immdError ("bad right operand", operator, cmdLine);
+    }
+  else
     return immdError ("bad operator", operator, cmdLine);
 
   // bind the result
@@ -2123,6 +2362,12 @@ ftab[] =                                            // sorted on the number of t
   },
   {
     "operandsLiteral", operandsLiteral              // 6
+  },
+  {
+    "operandsLitOrSym", operandsLitOrSym
+  },
+  {
+    "removeParentheses", removeParentheses
   },
   {
     "labelIsUncondJump", labelIsUncondJump          // 4
